Dfr 1074 Amend Application (Consented) refactor (#824)
* DFR-1074: Add Pojo representations of Case Data